addison: update manifest + sepolicy
[*] sepolicy for mods

Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.mods.rc
+++ b/rootdir/etc/init.mods.rc
@@ -5,12 +5,14 @@ on boot
 	# HAX for mods
 	chmod 0660 /sys/devices/soc/soc:muc_svc@0/mods_interfaces
 	chmod 0660 /sys/devices/soc/soc:muc_svc@0/mods_interfaces/3
+	chmod 0660 /sys/class/vendor/mod0/pwr_up_reason
 	chmod root oem_5020 /sys/devices/soc/soc:muc_svc@0/mods_interfaces
 	chmod root oem_5020 /sys/devices/soc/soc:muc_svc@0/mods_interfaces/3
 
 on post-fs-data
     # Create greybus firmware folder
     mkdir /data/gbfirmware 0770 oem_5020 oem_5020
+    mkdir /data/vendor/gbfirmware 0770 oem_5020 oem_5020
 
 on nonencrypted
     start vendor.gbmodinstall
