--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -277,10 +277,10 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 
-service charger /vendor/bin/charge_only_mode
-    class charger
-    group log
-    seclabel u:r:charger:s0
+#service charger /vendor/bin/charge_only_mode
+#    class charger
+#    #group log
+#    seclabel u:r:charger:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
@@ -508,6 +508,7 @@ on charger
     write /sys/class/leds/white/trigger "battery-full"
     start gbmodinstall
     start thermal-com
+    start vendor.charge_only_mode
 
 service vendor.energy-awareness /vendor/bin/energy-awareness
     class main
