--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -95,6 +95,7 @@ on post-fs
 
     write /proc/sys/vm/page-cluster 0
     write /proc/sys/vm/swappiness 100
+    write /dev/ipa 1
 
 on post-fs-data
 
