--- a/rootdir/etc/init.performance_profiles.rc
+++ b/rootdir/etc/init.performance_profiles.rc
@@ -1,5 +1,6 @@
 # Power saving profile
 on property:fku.perf.profile=0
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "conservative"
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1036800
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
     write /sys/class/devfreq/soc\:qcom,cpubw/governor bw_hwmon
