--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -439,7 +439,7 @@ on property:ro.use_data_netmgrd=false
     stop vendor.netmgrd
 
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
-    -O/data/vendor/wifi/wpa/sockets -puse_p2p_group_interface=1 -dd \
+    -O/data/vendor/wifi/wpa/sockets -puse_p2p_group_interface=1 \
     -g@android:vendor_wpa_wlan0
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
@@ -494,6 +494,7 @@ on charger
     start gbmodinstall
     start thermal-com
     start vendor.charge_only_mode
+    stop bootanim
 
 service vendor.energy-awareness /vendor/bin/energy-awareness
     class main
