--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -410,6 +410,7 @@ on property:init.svc.per_mgr=running
     start vendor.per_proxy
 
 on property:sys.shutdown.requested=*
+    write /sys/kernel/shutdown_wlan/shutdown 1
     stop vendor.per_proxy
     stop vendor.ims_rtp_daemon
 
