--- a/rootdir/etc/xperience-info.rc
+++ b/rootdir/etc/xperience-info.rc
@@ -3,7 +3,7 @@
 #
 # Add support to Franco Kernel Manager (Profiles)
 
-import /init.performance_profiles.rc
+import /vendor/etc/init/init.performance_profiles.rc
 
 on init
     write /sys/block/zram0/comp_algorithm lz4
