addison: update root dir from  LA.UM.7.6.r1-04300-89xx.0
also add some changes in rild

Signed-off-by: klozz <klozz@vivaldi.net>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -217,8 +217,6 @@ on post-fs-data
     mkdir /data/misc/dhcp 0750 dhcp system
 
     #create netmgr log dir
-    mkdir /data/misc/netmgr 0770 radio radio
-    chmod 0770 /data/misc/netmgr
     mkdir /data/vendor/netmgr 0770 radio radio
     chmod 0770 /data/vendor/netmgr
 
@@ -230,8 +228,8 @@ on post-fs-data
     mkdir /data/vendor/radio 0770 system radio
 
     # Create the directories used by CnE subsystem
-    mkdir /data/connectivity 0771 system system
-    chown system system /data/connectivity
+    mkdir /data/vendor/connectivity 0771 radio radio
+    chown radio radio /data/vendor/connectivity
 
     # Create directory used by display clients
     mkdir /data/misc/display 0770 system graphics
@@ -239,6 +237,9 @@ on post-fs-data
 
     # Create directory for radio
     mkdir /data/vendor/radio 0770 system radio
+
+    # Create directory for modem_config
+    mkdir /data/vendor/modem_config 0570 radio root
 
     # vendor.health-hal needs to be able to RW
     chown system system /sys/devices/soc/qpnp-fg-18/cycle_counts_bins
@@ -272,17 +273,14 @@ on post-fs-data
     mkdir /data/vendor/audio/acdbdata/delta 0770 media audio
 
     #Create PERFD deamon related dirs
-    setprop ro.min_freq_0 384000
-    mkdir /data/misc/perfd 0755 root system
-    chmod 2755 /data/misc/perfd
-    mkdir /data/system/perfd 0770 root system
-    rm /data/system/perfd/default_values
     mkdir /data/vendor/perfd 0770 root system
     chmod 2770 /data/vendor/perfd
     rm /data/vendor/perfd/default_values
 
+    mkdir /data/vendor/secure_element 0777 system system
+
     #Create IOP  deamon related dirs
-    mkdir /data/vendor/iop 0770 root system
+    mkdir /data/vendor/iop 0700 root system
 
     # Force all SSR systems to 'related' so they attempt
     # self-recovery without rebooting the device
@@ -511,8 +509,6 @@ service vendor.loc_launcher /system/vendor/bin/loc_launcher
 
 service vendor.ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
-    socket rild2 stream 660 root radio
-    socket rild-debug2 stream 660 radio system
     user radio
     group radio cache inet misc audio log readproc wakelock
     disabled
@@ -528,6 +524,22 @@ service vendor.time_daemon /vendor/bin/time_daemon
     class main
     user root
     group root
+
+service vendor.audio-hal-2-0 /vendor/bin/hw/android.hardware.audio@2.0-service
+    override
+    class hal
+    user audioserver
+    # media gid needed for /dev/fm (radio) and for /data/misc/media (tee)
+    group audio camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct oem_2901 wakelock
+    capabilities BLOCK_SUSPEND
+    ioprio rt 4
+    writepid /dev/cpuset/foreground/tasks /dev/stune/foreground/tasks
+    # audioflinger restarts itself when it loses connection with the hal
+    # and its .rc file has an "onrestart restart audio-hal" rule, thus
+    # an additional auto-restart from the init process isn't needed.
+    oneshot
+    interface android.hardware.audio@4.0::IDevicesFactory default
+    interface android.hardware.audio@2.0::IDevicesFactory default
 
 on charger
     load_system_props
