addison:init.qcom.rc: Update charger service path and label charger binary is moved to /system/bin.
Change-Id: I78574238f9fc5ec028d10ab866676bfc0cd36370
Signed-off-by: klozz <klozz@vivaldi.net>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -296,9 +296,8 @@ on post-fs-data
     #Start move_wifi_data service.
     start vendor.move_wifi_data
 
-service vendor.charger /charger
+service vendor.charger /system/bin/charger
     class charger
-    user system
     group system graphics input
     capabilities SYS_BOOT
     seclabel u:r:charger:s0
