--- a/rootdir/etc/init.performance_profiles.rc
+++ b/rootdir/etc/init.performance_profiles.rc
@@ -7,11 +7,12 @@ on property:fku.perf.profile=0
     write /sys/module/cpu_boost/parameters/input_boost_freq "0:1036800"
     write /sys/module/cpu_boost/parameters/input_boost_ms 1500
     write /sys/class/leds/lcd-backlight/max_brightness 100
-    write /sys/class/kgsl/kgsl-3d0/max_pwrlevel 3
+    write /sys/class/kgsl/kgsl-3d0/max_pwrlevel 5
 
 # Balance (FK defaults)
 on property:fku.perf.profile=1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2208000
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
     write /sys/class/devfreq/soc\:qcom,cpubw/governor bw_hwmon
     write /sys/module/cpu_boost/parameters/input_boost_freq "0:1036800"
@@ -21,7 +22,8 @@ on property:fku.perf.profile=1
 
 # Performance
 on property:fku.perf.profile=2
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2208000
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor performance
     write /sys/class/devfreq/soc\:qcom,cpubw/governor performance
     write /sys/module/cpu_boost/parameters/input_boost_freq "0:1804800"
