--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -294,10 +294,10 @@ on post-fs-data
     #Start move_wifi_data service.
     start vendor.move_wifi_data
 
-#service charger /vendor/bin/charge_only_mode
-#    class charger
-#    #group log
-#    seclabel u:r:charger:s0
+service vendor.charger /charger
+    class charger
+    group log
+    seclabel u:r:charger:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
@@ -547,7 +547,6 @@ on charger
     write /sys/class/leds/white/trigger "battery-full"
     start gbmodinstall
     start thermal-com
-    start vendor.charge_only_mode
 
 service vendor.energy-awareness /vendor/bin/energy-awareness
     class main
