--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -468,7 +468,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
 # Data Migration
 service vendor.move_wifi_data /system/bin/move_wifi_data.sh
     class main
-    user  wifi
+    user  system wifi
     group wifi
     disabled
     oneshot
