--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -214,6 +214,8 @@ on post-fs-data
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
+    # Add a symlink
+    symlink /data/vendor/wifi/wpa/wpa_supplicant.conf /data/misc/wifi/wpa_supplicant.conf
     mkdir /data/misc/dhcp 0750 dhcp system
 
     #create netmgr log dir
