addison: satisfy camera blobs doing a little hack in VNDK
it fix the follow issue "E HAL     : dlopen failed: cannot locate symbol "_ZN7android13AppOpsManagerC1Ev" referenced by "/system/lib/libsensor.so"..."
due to missing headers and calls

see: https://source.codeaurora.org/quic/la/platform/frameworks/native/commit/?h=LA.UM.7.3.r1-07900-sdm845.0&id=47f876b74be0a2d6d417f5ff385f85d835a97fe9

Bug: 1798259-XPE

Signed-off-by: klozz <klozz@vivaldi.net>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -181,6 +181,10 @@ on late-fs
     write /dev/cpuset/application/background/cpus 0-3
     write /dev/cpuset/application/cpus 0-3
 
+    #Hack for camera blobs (Oreo blobs)
+    mount none /vendor/lib/xpe/libbinder.so /system/lib/vndk-28/libbinder.so bind
+    mount none /vendor/lib/xpe/libcutils.so /system/lib/vndk-sp-28/libcutils.so bind
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /persist/data/sfs 0700 system system
