addison:  Drop unused user from laser service
Change-Id: I460fdb4cce5c95d871ec00c69147f0b1b3d07659

Signed-off-by: klozz <klozz@vivaldi.net>

--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -281,7 +281,7 @@ service vendor.mmi-boot-sh /vendor/bin/init.mmi.boot.sh
 service vendor.mmi-laser-sh /vendor/bin/init.mmi.laser.sh
     class core
     user root
-    group root oem_5004
+    group root
     oneshot
 
 # Start Sensor daemon
