--- a/rootdir/etc/xperience-info.rc
+++ b/rootdir/etc/xperience-info.rc
@@ -13,8 +13,8 @@ on init
     write /proc/sys/vm/page-cluster 0
 
 on post-fs
-    exec u:r:magisk:s0 -- /system/bin/mkswap /dev/block/zram0
-    exec u:r:magisk:s0 -- /system/bin/swapon /dev/block/zram0
+    exec -- /system/bin/mkswap /dev/block/zram0
+    exec -- /system/bin/swapon /dev/block/zram0
 
 on property:sys.boot_completed=1
     # allows Kernel Manager for Franco Kernel  to know this feature is supported
@@ -102,5 +102,5 @@ on property:sys.boot_completed=1
     # Force min freq to 652mhz this is always forced to 1.6ghz by the scheduler
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
 
-    exec u:r:magisk:s0 root root -- /vendor/bin/init.special_power.sh
+    exec root root -- /vendor/bin/init.special_power.sh
 
