--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -300,6 +300,7 @@ service vendor.charger /charger
     class charger
     user system
     group system graphics input
+    capabilities SYS_BOOT
     seclabel u:r:healthd:s0
 
 # Allow usb charging to be disabled peristently
