--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -298,8 +298,9 @@ on post-fs-data
 
 service vendor.charger /charger
     class charger
-    group system graphics
-#    seclabel u:r:healthd:s0
+    user system
+    group system graphics input
+    seclabel u:r:healthd:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
