addison: change seclabel for charger
Signed-off-by: klozz <klozz@vivaldi.net>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -301,7 +301,7 @@ service vendor.charger /charger
     user system
     group system graphics input
     capabilities SYS_BOOT
-    seclabel u:r:healthd:s0
+    seclabel u:r:charger:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
