--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -41,8 +41,8 @@ on early-init
     #symlink /vendor/firmware_mnt /firmware
     #symlink /vendor/bt_firmware /bt_firmware
     #symlink /vendor/dsp /dsp
-    symlink /firmware /vendor/firmware_mnt
-    symlink /dsp /vendor/dsp
+    #symlink /firmware /vendor/firmware_mnt
+    #symlink /dsp /vendor/dsp
 
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
