--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -18,14 +18,18 @@
         android:label="@string/device_settings_app_name"
         android:persistent="true">
 
-        <receiver android:name="org.lineageos.settings.device.BootCompletedReceiver">
+        <receiver android:name="org.lineageos.settings.device.BootCompletedReceiver"
+                  android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
-        <service android:name="ServiceWrapper" android:permission="ServiceWrapper">
+        <service
+            android:name="ServiceWrapper"
+            android:permission="ServiceWrapper"
+            android:exported="false">
             <intent-filter>
                 <action android:name="ServiceWrapper"/>
             </intent-filter>
@@ -33,6 +37,7 @@
 
         <activity
             android:name=".DozePreferenceActivity"
+            android:exported="false"
             android:label="@string/ambient_display_gestures_title"
             android:theme="@style/Theme.Main">
             <intent-filter>
@@ -49,7 +54,8 @@
         <activity
             android:name=".ActionsPreferenceActivity"
             android:label="@string/moto_gestures_panel_title"
-            android:theme="@style/Theme.Main">
+            android:theme="@style/Theme.Main"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
